# f042-ftdi

./: .gitignore  Cargo.toml  Embed.toml  README.md  asm.s  assemble.sh  build.rs  memory.x  openocd.cfg
.cargo/: config
src/: buffer.rs  ftdi.rs  hardware.rs  main.rs
